[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyside-navicube"
version = "0.0.1"
description = "FreeCAD-style NaviCube overlay widget for PySide6 — zero renderer dependency"
readme = "README.md"
license = { text = "LGPL-2.1" }
requires-python = ">=3.10"
keywords = ["pyside6", "qt", "navicube", "viewcube", "3d", "cad", "orientation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "PySide6",
    "numpy",
]

[project.optional-dependencies]
occ = ["pythonocc-core"]
vtk = ["vtk"]

[project.urls]
Repository = "https://github.com/nishikantmandal007/pyside-navicube"
Documentation = "https://osdag-org.github.io/pyside-navicube/"

[tool.hatch.build.targets.wheel]
packages = ["navicube"]
