[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "navcube"
version = "1.0.0"
description = "A 3D orientation cube widget for PySide6 — renderer-agnostic, drop-in ready"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["pyside6", "qt", "navcube", "navicube", "viewcube", "3d", "cad", "orientation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "PySide6",
    "numpy",
]

[project.optional-dependencies]
occ = ["pythonocc-core"]
vtk = ["vtk"]

[project.urls]
Repository = "https://github.com/nishikantmandal007/navcube"
Documentation = "https://nishikantmandal007.github.io/navcube/"

[tool.hatch.build.targets.wheel]
packages = ["navcube"]
